# pipeline-perf-tracker

./: .editorconfig  .gitignore  AUTHORS.txt  CONTRIBUTORS.txt  README.md  index.html  index.template.html  pyproject.toml  results.json  run-timed.py  runner.py
.github/workflows/: build.yaml
bundled_sources/NotoSans/: NotoSans-MM.designspace
bundled_sources/NotoSans/NotoSans-Bold.ufo/: fontinfo.plist  layercontents.plist  lib.plist
bundled_sources/NotoSans/NotoSans-Condensed.ufo/: fontinfo.plist  layercontents.plist  lib.plist
bundled_sources/NotoSans/NotoSans-CondensedBold.ufo/: fontinfo.plist  kerning.plist  layercontents.plist  lib.plist
bundled_sources/NotoSans/NotoSans-CondensedLight.ufo/: fontinfo.plist  layercontents.plist  lib.plist
bundled_sources/NotoSans/NotoSans-CondensedSemiBold.ufo/: fontinfo.plist  layercontents.plist  lib.plist
bundled_sources/NotoSans/NotoSans-Light.ufo/: fontinfo.plist  kerning.plist  layercontents.plist  lib.plist
bundled_sources/NotoSans/NotoSans-Regular.ufo/: features.fea  layercontents.plist  lib.plist
bundled_sources/NotoSans/NotoSans-SemiBold.ufo/: fontinfo.plist  groups.plist  layercontents.plist  lib.plist
bundled_sources/SofiaSans/: SofiaSans-VF-New.designspace
bundled_sources/SofiaSans/SofiaSans-Black.ufo/: fontinfo.plist  kerning.plist  lib.plist
bundled_sources/Truculenta/: Truculenta.designspace
projects/: babelfont.yml  fontmake_ttf.yml
results/: index.html  results.json
scenarios/: narrow_build_vf.yml  narrow_build_vf_from_designspace.yml  narrow_build_vf_from_glyphs.yml  read_ufo.yml
(+36231 files in other folders)
